Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBoolObjIntObj.quorum
class main
    action main
        Integer int
        int:setValue(5)
        Boolean bool = cast(Boolean, int)
    end
end